--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
   "display": "fullscreen",
   "orientation": "portrait",
   "background_color": "#F5F5DC",
-  "theme_color": "#F5F5DC"
-  // "background_color": "#3E4EB8",
-  // "theme_color": "#2F3BA2"
+  "theme_color": "#F5F5DC",
+
+  "def_background_color": "#3E4EB8 // manifest.json does not support comments.",
+  "def_theme_color": "#2F3BA2"
 }
